[package]
name = "globalkey"
description = "A rust node library for global key listeners in electron apps"
version = "0.1.0"
edition = "2018"
license = "MIT"
build = "src/build.rs"
authors = ["Will Lane <williamlane923@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
device_query = "0.2.8"
node-bindgen = "4.3.0"

[build-dependencies]
node-bindgen = { version = "4.3.0", features = ["build"] }
